--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,27 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<jackson.version>2.8.6</jackson.version>
-		 <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<neo4j.version>3.1.0</neo4j.version>
+		<parallec.version>0.10.4</parallec.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>io.parallec</groupId>
+			<artifactId>parallec-core</artifactId>
+			<version>${parallec.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j.driver</groupId>
+			<artifactId>neo4j-java-driver</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>${neo4j.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -23,6 +40,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jsonSchema</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
